--- a/package.json
+++ b/package.json
@@ -9,15 +9,15 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
     "classnames": "^2.3.1",
+    "email-validator": "^2.0.4",
     "immer": "^9.0.3",
     "node-sass": "^6.0.0",
     "normalize.css": "^8.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-modal": "^3.14.2",
+    "react-modal-image": "^2.5.0",
     "react-redux": "^7.2.4",
     "react-scripts": "4.0.3",
-    "reactjs-popup": "^2.0.4",
     "reddit-simple": "^2.1.1",
     "redux": "^4.1.0",
     "redux-thunk": "^2.3.0",
